// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`withdrawal tax snapshot regression > AU Brokerage 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > AU Brokerage 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > AU Brokerage 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > AU First Home Super Saver 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > AU First Home Super Saver 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > AU First Home Super Saver 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Accumulation) 10000 1`] = `
{
  "effectiveRate": 0.15,
  "taxFreeAmount": 8500,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Accumulation) 50000 1`] = `
{
  "effectiveRate": 0.15,
  "taxFreeAmount": 42500,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Accumulation) 100000 1`] = `
{
  "effectiveRate": 0.15,
  "taxFreeAmount": 85000,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Pension Phase) 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Pension Phase) 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > AU Super (Pension Phase) 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA Brokerage 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA Brokerage 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA Brokerage 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA FHSA 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA FHSA 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA FHSA 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA LIRA 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > CA LIRA 50000 1`] = `
{
  "effectiveRate": 0.14012934999999999,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > CA LIRA 100000 1`] = `
{
  "effectiveRate": 0.21307516499999998,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > CA RESP 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > CA RESP 50000 1`] = `
{
  "effectiveRate": 0.14012934999999999,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > CA RESP 100000 1`] = `
{
  "effectiveRate": 0.21307516499999998,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > CA RRSP 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > CA RRSP 50000 1`] = `
{
  "effectiveRate": 0.14012934999999999,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > CA RRSP 100000 1`] = `
{
  "effectiveRate": 0.21307516499999998,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > CA Savings Account 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA Savings Account 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA Savings Account 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA TFSA 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA TFSA 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > CA TFSA 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US 401k 10000 1`] = `
{
  "effectiveRate": 0.01,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > US 401k 50000 1`] = `
{
  "effectiveRate": 0.1107812,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > US 401k 100000 1`] = `
{
  "effectiveRate": 0.19456362000000002,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > US 529 10000 1`] = `
{
  "effectiveRate": 0.01,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > US 529 50000 1`] = `
{
  "effectiveRate": 0.1107812,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > US 529 100000 1`] = `
{
  "effectiveRate": 0.19456362000000002,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > US Brokerage 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Brokerage 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Brokerage 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US HSA 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US HSA 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US HSA 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US IRA 10000 1`] = `
{
  "effectiveRate": 0.01,
  "taxFreeAmount": 0,
  "taxableAmount": 10000,
}
`;

exports[`withdrawal tax snapshot regression > US IRA 50000 1`] = `
{
  "effectiveRate": 0.1107812,
  "taxFreeAmount": 0,
  "taxableAmount": 50000,
}
`;

exports[`withdrawal tax snapshot regression > US IRA 100000 1`] = `
{
  "effectiveRate": 0.19456362000000002,
  "taxFreeAmount": 0,
  "taxableAmount": 100000,
}
`;

exports[`withdrawal tax snapshot regression > US Roth 401k 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Roth 401k 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Roth 401k 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Roth IRA 10000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 10000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Roth IRA 50000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 50000,
  "taxableAmount": 0,
}
`;

exports[`withdrawal tax snapshot regression > US Roth IRA 100000 1`] = `
{
  "effectiveRate": 0,
  "taxFreeAmount": 100000,
  "taxableAmount": 0,
}
`;
